[metadata]
name = glass-hammer
version = 1.0
author = mentalblood
author_email = neceporenkostepan@gmail.com
description = Tool for transparent testing of non-trivial systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MentalBlood/glass_hammer
project_urls =
    Bug Tracker = https://github.com/MentalBlood/glass_hammer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src